--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.1",
+    "aos": "^2.3.4",
     "fe-pizzato": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -42,6 +43,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "stylelint": "^16.9.0",
+    "stylelint-scss": "^6.7.0"
   }
 }
