--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "^5.0.1",
     "react-stickynode": "^4.1.1",
     "sass": "^1.79.3",
+    "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
