--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.21.1",
     "aos": "^2.3.4",
+    "axios": "^1.7.7",
     "fe-pizzato": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
