--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.1.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +23,7 @@
     "react-scripts": "^5.0.1",
     "react-stickynode": "^4.1.1",
     "sass": "^1.80.5",
+    "sweetalert2": "^11.14.5",
     "swiper": "^11.1.14",
     "web-vitals": "^2.1.4"
   },
