--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fe-pizzato": "file:",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.26.2",
